test(album): refactor tests, fix stubbing and add missing branches
- refactor helpers to follow DRY
- fix UnnecessaryStubbingException (lenient stubs)
- add tests for album not found, admin-delete and artist mismatch